@@ -3,7 +3,6 @@ from __future__ import with_statement
 
 import math
 import os
-import shutil
 import time
 import warnings
 
@@ -619,7 +618,7 @@ class TestImageFunctions(PyfitsTestCase):
         """
 
         # Copy the original file before making any possible changes to it
-        shutil.copy(self.data('comp.fits'), self.temp('comp.fits'))
+        self.copy_file('comp.fits')
         mtime = os.stat(self.temp('comp.fits')).st_mtime
 
         time.sleep(1)
@@ -774,14 +773,14 @@ class TestImageFunctions(PyfitsTestCase):
         """
 
         # Copy the original file before saving to it
-        shutil.copy(self.data('test0.fits'), self.temp('test_new.fits'))
-        with pyfits.open(self.temp('test_new.fits'), mode='update') as hdul:
+        self.copy_file('test0.fits')
+        with pyfits.open(self.temp('test0.fits'), mode='update') as hdul:
             orig_data = hdul[1].data.copy()
             hdr_copy = hdul[1].header.copy()
             del hdr_copy['NAXIS*']
             hdul[1].header = hdr_copy
 
-        with pyfits.open(self.temp('test_new.fits')) as hdul:
+        with pyfits.open(self.temp('test0.fits')) as hdul:
             assert_true((orig_data == hdul[1].data).all())
 
     def test_open_scaled_in_update_mode(self):
@@ -795,7 +794,7 @@ class TestImageFunctions(PyfitsTestCase):
         """
 
         # Copy the original file before making any possible changes to it
-        shutil.copy(self.data('scale.fits'), self.temp('scale.fits'))
+        self.copy_file('scale.fits')
         mtime = os.stat(self.temp('scale.fits')).st_mtime
 
         time.sleep(1)
@@ -891,7 +890,7 @@ class TestImageFunctions(PyfitsTestCase):
     def test_scale_back(self):
         """A simple test for #120--the scale_back feature for image HDUs."""
 
-        shutil.copy(self.data('scale.fits'), self.temp('scale.fits'))
+        self.copy_file('scale.fits')
         with pyfits.open(self.temp('scale.fits'), mode='update',
                          scale_back=True) as hdul:
             orig_bitpix = hdul[0].header['BITPIX']
